[package]
name = "gemma"
version = "0.1.0"
edition = "2021"

[dependencies]
candle-core = { git = "https://github.com/huggingface/candle", package = "candle-core" }
candle-nn = { git = "https://github.com/huggingface/candle", package = "candle-nn" }
candle-transformers = { git = "https://github.com/huggingface/candle", package = "candle-transformers" }
tokenizers = { version = "0.21.0", features = ["http"] }
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
