[package]
name = "gemma"
version = "0.1.0"
edition = "2021"

[dependencies]
candle-core = { git = "https://github.com/huggingface/candle", package = "candle-core", features = ["cuda"] }
candle-nn = { git = "https://github.com/huggingface/candle", package = "candle-nn", features = ["cuda"] }
candle-transformers = { git = "https://github.com/huggingface/candle", package = "candle-transformers", features = ["cuda"] }
candle-examples = { git = "https://github.com/huggingface/candle", package = "candle-examples", features = ["cuda"] }
tokenizers = { version = "0.21.0", features = ["http"] }
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
hf-hub = "0.4.3"
serde_json = "1.0.143"
safetensors = "0.6.2"
